--- a/templates/susy_parameters.hpp.in
+++ b/templates/susy_parameters.hpp.in
@@ -22,6 +22,7 @@
 #define @ModelName@_susy_parameters_H
 
 #include "betafunction.hpp"
+#include "@ModelName@_input_parameters.hpp"
 
 #include <iosfwd>
 #include <string>
@@ -30,14 +31,16 @@
 
 class @ModelName@_susy_parameters : public Beta_function {
 public:
-   @ModelName@_susy_parameters();
-   @ModelName@_susy_parameters(double scale_, double loops_, double thresholds_@cCtorParameterList@);
+   @ModelName@_susy_parameters(const @ModelName@_input_parameters& input_ = @ModelName@_input_parameters());
+   @ModelName@_susy_parameters(double scale_, double loops_, double thresholds_, const @ModelName@_input_parameters& input_@cCtorParameterList@);
    virtual ~@ModelName@_susy_parameters() {}
    virtual Eigen::ArrayXd beta() const;
    virtual const Eigen::ArrayXd display() const;
    virtual void print(std::ostream&) const;
    virtual void set(const Eigen::ArrayXd&);
    virtual std::vector<std::string> get_parameter_names() const;
+   const @ModelName@_input_parameters& get_input() const;
+   void set_input(const @ModelName@_input_parameters&);
 
    @ModelName@_susy_parameters calc_beta() const;
    virtual void clear();
@@ -48,6 +51,7 @@ public:
 
 protected:
 @parameterDef@
+   @ModelName@_input_parameters input;
 
 private:
    static const int numberOfParameters = @numberOfParameters@;
