Create local const references for all input parameters in the beta functions and anomalous dimensions

--- a/templates/susy_parameters.cpp.in
+++ b/templates/susy_parameters.cpp.in
@@ -24,6 +24,7 @@
 #include <iostream>
 
 #define CLASSNAME @ModelName@_susy_parameters
+#define INPUT(parameter) input.parameter
 
 @ModelName@_susy_parameters::@ModelName@_susy_parameters(const @ModelName@_input_parameters& input_)
    : Beta_function()
