--- a/templates/soft_parameters.cpp.in
+++ b/templates/soft_parameters.cpp.in
@@ -23,6 +23,8 @@
 
 #include <iostream>
 
+#define INPUT(parameter) input.parameter
+
 @ModelName@_soft_parameters::@ModelName@_soft_parameters(const @ModelName@_input_parameters& input_)
    : @ModelName@_susy_parameters(input_)
    @parameterDefaultInit@
