--- a/templates/convergence_tester.hpp.in
+++ b/templates/convergence_tester.hpp.in
@@ -24,6 +24,8 @@
 #include "@ModelName@_model.hpp"
 #include "two_scale_convergence_tester_skeleton.hpp"
 
+namespace flexiblesusy {
+
 class @ModelName@_convergence_tester : public Convergence_tester_skeleton<@ModelName@> {
 public:
    @ModelName@_convergence_tester(@ModelName@*, double);
@@ -32,5 +34,7 @@ public:
 protected:
    virtual double max_rel_diff() const;
 };
+
+}
 
 #endif
