--- a/templates/physical.cpp.in
+++ b/templates/physical.cpp.in
@@ -22,6 +22,8 @@
 
 #include <iostream>
 
+namespace flexiblesusy {
+
 @ModelName@_physical::@ModelName@_physical()
    :
 @physicalMassesInitNoLeadingComma@
@@ -44,4 +46,6 @@ void @ModelName@_physical::print(std::ostream& ostr) const
            "one-loop pole mixing matrices:\n"
            "----------------------------------------\n";
 @printMixingMatrices@
+}
+
 }
