--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -26,6 +26,8 @@
 #include <iostream>
 #include <iomanip>
 
+namespace flexiblesusy {
+
 #define PHYSICAL(p) model.get_physical().p
 
 namespace @ModelName@_info {
@@ -107,4 +109,6 @@ void @ModelName@_spectrum_plotter::write_spectrum(const TSpectrum& spectrum, std
                  << '\n';
       }
    }
+}
+
 }
