--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -34,6 +34,8 @@ namespace flexiblesusy {
 #define BETAPARAMETER(p) beta_functions.get_##p()
 #define BETA(p) beta_##p
 #define SM(p) Electroweak_constants::p
+#define Pole(p) model->get_physical().p
+#define MODEL model
 
 @ModelName@_low_scale_constraint::@ModelName@_low_scale_constraint()
    : Constraint<Two_scale>()
