--- a/templates/high_scale_constraint.cpp.in
+++ b/templates/high_scale_constraint.cpp.in
@@ -34,6 +34,7 @@ namespace flexiblesusy {
 #define MODELPARAMETER(p) model->get_##p()
 #define BETAPARAMETER(p) beta_functions.get_##p()
 #define BETA(p) beta_##p
+#define MODEL model
 
 @ModelName@_high_scale_constraint::@ModelName@_high_scale_constraint()
    : Constraint<Two_scale>()
