--- a/templates/initial_guesser.cpp.in
+++ b/templates/initial_guesser.cpp.in
@@ -32,6 +32,7 @@ namespace flexiblesusy {
 #define INPUTPARAMETER(p) input_pars.p
 #define MODELPARAMETER(p) model->get_##p()
 #define SM(p) Electroweak_constants::p
+#define MODEL model
 
 @ModelName@_initial_guesser::@ModelName@_initial_guesser(
    @ModelName@* model_,
