--- a/templates/susy_scale_constraint.cpp.in
+++ b/templates/susy_scale_constraint.cpp.in
@@ -32,6 +32,7 @@ namespace flexiblesusy {
 #define MODELPARAMETER(p) model->get_##p()
 #define BETAPARAMETER(p) beta_functions.get_##p()
 #define BETA(p) beta_##p
+#define MODEL model
 
 @ModelName@_susy_scale_constraint::@ModelName@_susy_scale_constraint()
    : Constraint<Two_scale>()
