--- a/templates/soft_parameters.cpp.in
+++ b/templates/soft_parameters.cpp.in
@@ -99,4 +99,4 @@ std::vector<std::string> @ModelName@_soft_parameters::get_parameter_names() cons
    return names;
 }
 
-}
+} // namespace flexiblesusy
