--- a/templates/UMSSM/FlexibleSUSY.m.in
+++ b/templates/UMSSM/FlexibleSUSY.m.in
@@ -1,4 +1,6 @@
 
+FSModelName = Model`Name;
+
 InputParameters = { m0, m12, TanBeta, Azero, LambdaInput,
                     ALambdaInput, vSInput, Qq, Ql, QHd, QHu, Qd, Qu,
                     Qe, Qs };
