Solve class name conflict problem for sub-models.
The problem: The user can create different models which are based on
the same SARAH model file (for example MSSM and MSSM/CKM).  In this
case he have to make sure that the generated C++ classes have
different names, i.e. they must not be called both "MSSM".

This commit provides a way to specify the class name in the
`createmodel' script.  The class name can now be set via

   ./createmodel --models=MSSM,MSSMCKM:MSSM/CKM

Here two models will be created:

 1. SARAH model "MSSM" (no submodel).  The C++ class name will be
    "MSSM"

 2. SARAH model "MSSM" with submodel "CKM".  The C++ class name
    will be "MSSMCKM"

I.e. at the end there will be two classes: MSSM, MSSMCKM and no
naming conflict will occur.

--- a/templates/UMSSM/FlexibleSUSY.m.in
+++ b/templates/UMSSM/FlexibleSUSY.m.in
@@ -1,5 +1,5 @@
 
-FSModelName = Model`Name;
+FSModelName = "@CLASSNAME@";
 
 InputParameters = { m0, m12, TanBeta, Azero, LambdaInput,
                     ALambdaInput, vSInput, Qq, Ql, QHd, QHu, Qd, Qu,
