make config directory configurable from the outside

--- a/templates/start.m.in
+++ b/templates/start.m.in
@@ -1,4 +1,5 @@
 $flexiblesusyOutputDir   = "@DIR@";
+$flexiblesusyConfigDir   = FileNameJoin[{Directory[], "config"}];
 $flexiblesusyMetaDir     = FileNameJoin[{Directory[], "meta"}];
 $flexiblesusyTemplateDir = FileNameJoin[{Directory[], "templates"}];
 AppendTo[$Path, $flexiblesusyMetaDir];
