--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -25,6 +25,7 @@
 #include "ew_input.hpp"
 #include "gsl_utils.hpp"
 #include "minimizer.hpp"
+#include "root_finder.hpp"
 
 #include <cassert>
 #include <cmath>
