--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -51,74 +51,9 @@ public:
    const @ModelName@& get_model() const { return model; }
    void set_precision_goal(double precision_goal_) { precision_goal = precision_goal_; }
 
-   void run(const @ModelName@_input_parameters& input) {
-      @ModelName@_high_scale_constraint high_scale_constraint(input);
-      @ModelName@_susy_scale_constraint susy_scale_constraint(input);
-      @ModelName@_low_scale_constraint  low_scale_constraint(input);
-
-      std::vector<Constraint<Two_scale>*> upward_constraints;
-      upward_constraints.push_back(&low_scale_constraint);
-      upward_constraints.push_back(&high_scale_constraint);
-
-      std::vector<Constraint<Two_scale>*> downward_constraints;
-      downward_constraints.push_back(&high_scale_constraint);
-      downward_constraints.push_back(&susy_scale_constraint);
-      downward_constraints.push_back(&low_scale_constraint);
-
-      model.set_input(input);
-
-      @ModelName@_convergence_tester convergence_tester(&model, precision_goal);
-      @ModelName@_initial_guesser initial_guesser(&model, input,
-                                                  low_scale_constraint,
-                                                  susy_scale_constraint,
-                                                  high_scale_constraint);
-      Two_scale_increasing_precision precision(10.0, precision_goal);
-
-      RGFlow<Two_scale> solver;
-      solver.set_convergence_tester(&convergence_tester);
-      solver.set_running_precision(&precision);
-      solver.set_initial_guesser(&initial_guesser);
-      solver.add_model(&model, upward_constraints, downward_constraints);
-
-      high_scale = susy_scale = low_scale = 0.;
-
-      solver.solve();
-
-      high_scale = high_scale_constraint.get_scale();
-      susy_scale = susy_scale_constraint.get_scale();
-      low_scale  = low_scale_constraint.get_scale();
-
-      if (model.run_to(susy_scale))
-         throw RGFlow<Two_scale>::NonPerturbativeRunningError(&model, susy_scale);
-
-      model.calculate_spectrum();
-
-      if (model.run_to(low_scale))
-         throw RGFlow<Two_scale>::NonPerturbativeRunningError(&model, low_scale);
-   }
-
-   void write_running_couplings(const std::string& filename = "@ModelName@_rge_running.dat") const {
-      @ModelName@ tmp_model(model);
-      const unsigned error = tmp_model.run_to(low_scale);
-      if (error) {
-         ERROR("@ModelName@_runner::write_running_couplings: run to scale "
-               << low_scale << " failed");
-         return;
-      }
-
-      @ModelName@_parameter_getter parameter_getter;
-      Coupling_monitor<@ModelName@, @ModelName@_parameter_getter>
-         coupling_monitor(tmp_model, parameter_getter);
-
-      coupling_monitor.run(low_scale, high_scale, 100, true);
-      coupling_monitor.write_to_file(filename);
-   }
-
-   void write_spectrum(const std::string& filename = "@ModelName@_spectrum.dat") const {
-      @ModelName@_spectrum_plotter plotter;
-      plotter.extract_spectrum(model);
-      plotter.write_to_file(filename);
-   }
+   void run(const @ModelName@_input_parameters& input);
+   void write_running_couplings(const std::string& filename = "@ModelName@_rge_running.dat") const;
+   void write_spectrum(const std::string& filename = "@ModelName@_spectrum.dat") const;
 
 private:
    @ModelName@ model;
@@ -126,7 +61,100 @@ private:
    double precision_goal; ///< precision goal
 };
 
+/**
+ * @brief Run's the RG solver with the given input parameters
+ *
+ * This function sets up the RG solver using a high-scale, susy-scale
+ * and low-scale constraint.  Afterwards the solver is run until
+ * convergence is reached or an error occours.  Finally the particle
+ * spectrum (pole masses) is calculated.
+ *
+ * @param input model input parameters
+ */
+void @ModelName@_runner::run(const @ModelName@_input_parameters& input)
+{
+   @ModelName@_high_scale_constraint high_scale_constraint(input);
+   @ModelName@_susy_scale_constraint susy_scale_constraint(input);
+   @ModelName@_low_scale_constraint  low_scale_constraint(input);
+
+   std::vector<Constraint<Two_scale>*> upward_constraints;
+   upward_constraints.push_back(&low_scale_constraint);
+   upward_constraints.push_back(&high_scale_constraint);
+
+   std::vector<Constraint<Two_scale>*> downward_constraints;
+   downward_constraints.push_back(&high_scale_constraint);
+   downward_constraints.push_back(&susy_scale_constraint);
+   downward_constraints.push_back(&low_scale_constraint);
+
+   model.set_input(input);
+
+   @ModelName@_convergence_tester convergence_tester(&model, precision_goal);
+   @ModelName@_initial_guesser initial_guesser(&model, input,
+                                               low_scale_constraint,
+                                               susy_scale_constraint,
+                                               high_scale_constraint);
+   Two_scale_increasing_precision precision(10.0, precision_goal);
+
+   RGFlow<Two_scale> solver;
+   solver.set_convergence_tester(&convergence_tester);
+   solver.set_running_precision(&precision);
+   solver.set_initial_guesser(&initial_guesser);
+   solver.add_model(&model, upward_constraints, downward_constraints);
+
+   high_scale = susy_scale = low_scale = 0.;
+
+   solver.solve();
+
+   high_scale = high_scale_constraint.get_scale();
+   susy_scale = susy_scale_constraint.get_scale();
+   low_scale  = low_scale_constraint.get_scale();
+
+   if (model.run_to(susy_scale))
+      throw RGFlow<Two_scale>::NonPerturbativeRunningError(&model, susy_scale);
+
+   model.calculate_spectrum();
+
+   if (model.run_to(low_scale))
+      throw RGFlow<Two_scale>::NonPerturbativeRunningError(&model, low_scale);
 }
+
+/**
+ * Create a text file which contains the values of all model
+ * parameters at all scales between the low-scale and the high-scale.
+ *
+ * @param filename name of output file
+ */
+void @ModelName@_runner::write_running_couplings(const std::string& filename) const
+{
+   @ModelName@ tmp_model(model);
+   const unsigned error = tmp_model.run_to(low_scale);
+   if (error) {
+      ERROR("@ModelName@_runner::write_running_couplings: run to scale "
+            << low_scale << " failed");
+      return;
+   }
+
+   @ModelName@_parameter_getter parameter_getter;
+   Coupling_monitor<@ModelName@, @ModelName@_parameter_getter>
+      coupling_monitor(tmp_model, parameter_getter);
+
+   coupling_monitor.run(low_scale, high_scale, 100, true);
+   coupling_monitor.write_to_file(filename);
+}
+
+/**
+ * Write spectrum (pole masses) to a text file
+ *
+ * @param filename output file name
+ */
+void @ModelName@_runner::write_spectrum(const std::string& filename) const
+{
+   @ModelName@_spectrum_plotter plotter;
+   plotter.extract_spectrum(model);
+   plotter.write_to_file(filename);
+}
+
+} // namespace flexiblesusy
 
 int main()
 {
