--- a/templates/MRSSM/FlexibleSUSY.m.in
+++ b/templates/MRSSM/FlexibleSUSY.m.in
@@ -5,6 +5,10 @@ FSModelName = "@CLASSNAME@";
 
 InputParameters = { TanBeta };
 
+DefaultParameterPoint = {
+    {TanBeta, 10}
+};
+
 ParametersToSolveTadpoles = { mHd2, mHu2, mS2, mT2 };
 
 LowScaleInput = {
