--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -90,6 +90,7 @@ private:
    int solve_ewsb_iteratively_with(const gsl_multiroot_fsolver_type*, const double[@numberOfEWSBEquations@]);
    int solve_ewsb_tree_level_via_soft_higgs_masses();
    void ewsb_initial_guess(double[@numberOfEWSBEquations@]);
+   static int tadpole_equations(const gsl_vector*, void*, gsl_vector*);
 
    double A0(double) const;
    double B0(double, double, double) const;
@@ -105,8 +106,6 @@ private:
 @phasesDefinition@
 
 };
-
-int tadpole_equations(const gsl_vector*, void*, gsl_vector*);
 
 } // namespace flexiblesusy
 
