--- a/templates/MRSSM/FlexibleSUSY.m.in
+++ b/templates/MRSSM/FlexibleSUSY.m.in
@@ -11,9 +11,18 @@ DefaultParameterPoint = {
 
 ParametersToSolveTadpoles = { mHd2, mHu2, mS2, mT2 };
 
+SUSYScale = Sqrt[mu2[3,3]];
+
+SUSYScaleFirstGuess = 1000;
+
 LowScaleInput = {
     {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
     {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]}
+};
+
+InitialGuessAtLowScale = {
+   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
+   {vu, SM[vev] Sin[ArcTan[TanBeta]]}
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
