--- a/templates/run_low_scale_model.cpp.in
+++ b/templates/run_low_scale_model.cpp.in
@@ -21,6 +21,7 @@
 #include "@ModelName@_model.hpp"
 #include "@ModelName@_input_parameters.hpp"
 #include "@ModelName@_low_scale_constraint.hpp"
+#include "@ModelName@_susy_scale_constraint.hpp"
 #include "@ModelName@_convergence_tester.hpp"
 #include "@ModelName@_initial_guesser.hpp"
 #include "@ModelName@_utilities.hpp"
@@ -31,24 +32,19 @@
 #include <iostream>
 #include <vector>
 
-#define SM(p) Electroweak_constants::p
-
 int main()
 {
    using namespace flexiblesusy;
 
    @ModelName@_input_parameters input;
    @ModelName@ model(input);
-
-   // initialize model parameters
-   model.set_scale(SM(MZ));
-   model.set_loops(2);
-
-   model.set_@hyperchargeCoupling@(sqrt(4.0 * M_PI * SM(alpha1)));
-   model.set_@leftCoupling@(sqrt(4.0 * M_PI * SM(alpha2)));
-   model.set_@strongCoupling@(sqrt(4.0 * M_PI * SM(alpha3)));
+   @ModelName@_low_scale_constraint low_scale_constraint(input);
+   @ModelName@_susy_scale_constraint susy_scale_constraint(input);
+   @ModelName@_initial_guesser initial_guesser(&model, input, low_scale_constraint);
 
    try {
+      initial_guesser.guess();
+      model.run_to(susy_scale_constraint.get_scale());
       model.calculate_spectrum();
       model.print(std::cout);
       // @ModelName@_spectrum_plotter plotter;
