--- a/templates/high_scale_constraint.cpp.in
+++ b/templates/high_scale_constraint.cpp.in
@@ -22,6 +22,10 @@
 #include "@ModelName@_model.hpp"
 #include "wrappers.hpp"
 #include "logger.hpp"
+#include "ew_input.hpp"
+#include "gsl_utils.hpp"
+#include "minimizer.hpp"
+#include "root_finder.hpp"
 
 #include <cassert>
 #include <cmath>
@@ -34,7 +38,11 @@ namespace flexiblesusy {
 #define MODELPARAMETER(p) model->get_##p()
 #define BETAPARAMETER(p) beta_functions.get_##p()
 #define BETA(p) beta_##p
+#define SM(p) Electroweak_constants::p
+#define STANDARDDEVIATION(p) Electroweak_constants::Error_##p
+#define Pole(p) model->get_physical().p
 #define MODEL model
+#define MODELCLASSNAME @ModelName@
 
 @ModelName@_high_scale_constraint::@ModelName@_high_scale_constraint()
    : Constraint<Two_scale>()
