Add SLHA2 library from http://fthomas.github.io/slhaea/

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -1,5 +1,5 @@
 MODELS     := @MODELS@
-MODULES    := config src legacy meta templates $(MODELS) test examples doc
+MODULES    := config src legacy slhaea meta templates $(MODELS) test examples doc
 CPPFLAGS   := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
 CXXFLAGS   := @CXXFLAGS@
 FFLAGS     := @FFLAGS@
