--- a/templates/run_low_scale_model.cpp.in
+++ b/templates/run_low_scale_model.cpp.in
@@ -30,13 +30,18 @@
 #include "two_scale_solver.hpp"
 #include "error.hpp"
 #include "ew_input.hpp"
+#include "command_line_options.hpp"
 
 #include <iostream>
 #include <vector>
 
-int main()
+int main(int argc, const char* argv[])
 {
    using namespace flexiblesusy;
+
+   Command_line_options options(argc, argv);
+   if (options.must_exit())
+      return options.status();
 
    @ModelName@_input_parameters input;
    @ModelName@ model(input);
