--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -19,12 +19,17 @@
 // File generated at @DateAndTime@
 
 #include "@ModelName@_utilities.hpp"
+#include "@ModelName@_input_parameters.hpp"
 #include "logger.hpp"
 #include "wrappers.hpp"
+#include "lowe.h"
+#include "slhaea.h"
 
 #include <fstream>
 #include <iostream>
 #include <iomanip>
+
+using namespace softsusy;
 
 namespace flexiblesusy {
 
@@ -109,6 +114,85 @@ void @ModelName@_spectrum_plotter::write_spectrum(const TSpectrum& spectrum, std
                  << '\n';
       }
    }
+}
+
+@ModelName@_slha_reader::@ModelName@_slha_reader(const std::string& input_filename_)
+   : input_filename(input_filename_)
+{
+}
+
+void @ModelName@_slha_reader::fill(QedQcd& oneset)
+{
+   std::ifstream ifs(input_filename);
+   const SLHAea::Coll input(ifs);
+
+   for (SLHAea::Block::const_iterator line = input.at("SMINPUTS").cbegin();
+        line != input.at("SMINPUTS").cend(); ++line) {
+      if (!line->is_data_line()) continue;
+
+      if (line->size() >= 2) {
+         const int key = SLHAea::to<int>((*line)[0]);
+         const double value = SLHAea::to<double>((*line)[1]);
+         switch (key) {
+         case 1:
+            oneset.setAlpha(ALPHA, 1.0 / value);
+            break;
+         case 2: // GMU = value;
+            break;
+         case 3:
+            oneset.setAlpha(ALPHAS, value);
+            break;
+         case 4:
+            oneset.setMu(value);
+            // MZ = value;
+            break;
+         case 5:
+            oneset.setMass(mBottom, value);
+            oneset.setMbMb(value);
+            break;
+         case 6:
+            oneset.setPoleMt(value);
+            break;
+         case 7:
+            oneset.setMass(mTau, value);
+            oneset.setPoleMtau(value);
+            break;
+         case 8:
+            break;
+         case 11:
+            oneset.setMass(mElectron, value);
+            break;
+         case 12:
+            break;
+         case 13:
+            oneset.setMass(mMuon, value);
+            break;
+         case 14:
+            break;
+         case 21:
+            oneset.setMass(mDown, value);
+            break;
+         case 22:
+            oneset.setMass(mUp, value);
+            break;
+         case 23:
+            oneset.setMass(mStrange, value);
+            break;
+         case 24:
+            oneset.setMass(mCharm, value);
+            break;
+         default:
+            WARNING("Unrecognized key in SMINPUTS: " << key);
+            break;
+         }
+      } else {
+         WARNING("SMINPUTS entry has not enough columns");
+      }
+   }
+}
+
+void @ModelName@_slha_reader::fill(@ModelName@_input_parameters&)
+{
 }
 
 } // namespace flexiblesusy
